fix: header now doesn't cover the scrollbar

--- a/assets/style.css
+++ b/assets/style.css
@@ -214,7 +214,6 @@ nav {
 /* #region main */
 main {
     width: calc(100% - 245px);
-    height: 100vh;
     padding: 80px 0;
     float: right;
     overflow-y: auto;
